adjusted the width of the step status to prevent wrapping on smaller screens

--- a/openassessment/xblock/static/sass/oa/views/_oa-base.scss
+++ b/openassessment/xblock/static/sass/oa/views/_oa-base.scss
@@ -55,12 +55,12 @@
       }
 
       @include media($bp-dm) {
-        @include span-columns(9 of 12);
+        @include span-columns(8 of 12);
         margin-bottom: 0;
       }
 
       @include media($bp-dl) {
-        @include span-columns(9 of 12);
+        @include span-columns(8 of 12);
         margin-bottom: 0;
       }
 
@@ -173,14 +173,14 @@
       }
 
       @include media($bp-dm) {
-        @include span-columns(3 of 12);
+        @include span-columns(4 of 12);
         @include omega();
         position: relative;
         top:-12px;
       }
 
       @include media($bp-dl) {
-        @include span-columns(3 of 12);
+        @include span-columns(4 of 12);
         @include omega();
         position: relative;
         top: -12px;
